- Svenska istället för engelska i UI.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 </div>
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" id="toggleIsDone" />
-                                    <label class="form-check-label" for="toggleIsDone">Is done</label>
+                                    <label class="form-check-label" for="toggleIsDone">Avklarad</label>
                                 </div>
 
                                 <div class="modal-footer">
