Date Validation on NewTodo

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="editStartDate" class="form-label">Startdatum</label>
-                                    <input type="date" class="form-control" id="editStartDate" required />                                    
+                                    <input type="date" class="form-control" id="editStartDate" required />
+                                    <div class="invalid-feedback">Ogiltligt Datum.</div>                                    
                                 </div>
                                 <div class="mb-3">
                                     <label for="editStopDate" class="form-label">Slutdatum</label>
@@ -156,9 +157,9 @@
                                 <div class="mb-3">
                                     <label for="todoTitle" class="form-label">Titel</label>
                                     <input type="text" class="form-control" id="todoTitle" required />
-                                    <div class="invalid-feedback">
+                                    <!-- <div class="invalid-feedback">
                                         Ange en titel för din ToDo.
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="mb-3">
                                     <label for="todoInfo" class="form-label">Information</label>
@@ -167,7 +168,7 @@
                                 <div class="mb-3">
                                     <label for="startDate" class="form-label">Startdatum</label>
                                     <input type="date" class="form-control" id="startDate" required />
-                                    <div class="invalid-feedback">Ett datum måste väljas.</div>
+                                    <div class="invalid-feedback">Ogiltligt Datum.</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="stopDate" class="form-label">Slutdatum</label>
