--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span class="text-white"> TODO-Kalender </span>
     </header>
     <div class="row bg-secondary text-white margin-right-0 flex-fill">
-        <div class="col-12 col-sm-4 col-md-3 col-lg-2 padding-right-0">
+        <div class="col-12 col-md-3 col-lg-2 padding-right-0">
             <!-- Welcome clock -->
             <div class="day bg-info p-2 mb-2 text-center text-dark">
                 <p class="fs-2" id="welcome-time">TID</p>
@@ -179,7 +179,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-none d-sm-flex flex-column col-sm-8 col-md-9 col-lg-10 bg-success padding-right-0 flex-fill">
+        <div class="d-none d-sm-flex flex-column col-md-9 col-lg-10 bg-success padding-right-0 flex-fill">
             <div class="row margin-right-0">
                 <div class="col-12 padding-0">
                     <div class="
