--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="./wwwroot/css/base.css" />
+    <link rel="stylesheet" href="./css/base.css" />
 
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
@@ -18,11 +18,11 @@
 
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
 
-    <script defer src="./wwwroot/js/main.js"></script>
-    <script defer src="./wwwroot/js/welcome-clock.js"></script>
-    <script defer src="./wwwroot/js/calendar-change-months.js"></script>
-    <script defer src="./wwwroot/js/todo.js"></script>
-    <script defer src="./wwwroot/js/Calendar.js"></script>
+    <script defer src="./js/main.js"></script>
+    <script defer src="./js/welcome-clock.js"></script>
+    <script defer src="./js/calendar-change-months.js"></script>
+    <script defer src="./js/todo.js"></script>
+    <script defer src="./js/Calendar.js"></script>
 </head>
 
 <body>
