removed onClick-ReloadContent from form

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
                                     <input type="date" class="form-control" id="editStopDate" />
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
-                                        onclick="reloadContent()">
+                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
                                         Close
                                     </button>
                                     <button type="submit" class="btn btn-primary">Submit</button>
@@ -173,8 +172,7 @@
                                     <input type="date" class="form-control" id="stopDate" />
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
-                                        onclick="reloadContent()">
+                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
                                         Close
                                     </button>
                                     <button type="submit" id="my_button" class="btn btn-primary">Submit</button>
