--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
         <div class="daycontaner">
             <div class="row">
                 <div class="col">
-                    <div class="day-Nr">1</div>
-                    <div class="todo-nr">0</div>
+                    <div class="day-Nr ">1</div>
+                    <div class="todo-nr circle d-inline-flex flex justify-content-center align-items-center">0</div>
                 </div>
                 <div class="day-red-day col">sveriges nationaldag</div>
             </div>
