--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
                 </div>
                 <div class="day-red-day col">sveriges nationaldag</div>
             </div>
+        </div>
     </template>
 </body>
 
