--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
     </div>
     <!-- Button trigger modal -->
-    <button class="btn btn-primary circle add-todo" data-bs-toggle="modal" data-bs-target="#newTodo">
+    <button class="btn btn-primary circle add-todo topp-z" data-bs-toggle="modal" data-bs-target="#newTodo">
         <i class="fas fa-plus-circle"></i>
     </button>
     <!-- modal edit todo -->
