fix the overflow
Co-authored-by: David Jensen <Tsourdox@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <header class="p-1 bg-primary text-center fs-1 margin-right-0 border-bottom border-dark border-2">
         <span class="text-white"> TODO-Kalender </span>
     </header>
-    <div class="row bg-secondary text-white margin-right-0 flex-fill">
-        <div class="col-12 col-md-3 col-lg-2 padding-right-0">
+    <div class="row bg-secondary text-white margin-right-0 flex-fill min-high-0">
+        <div class="col-12 col-md-3 col-lg-2 padding-right-0 flex-colum-100">
             <!-- Welcome clock -->
             <div class="day bg-info p-2 mb-2 text-center text-dark">
                 <p class="fs-2" id="welcome-time">TID</p>
                 <p id="welcome-date" class="text-capitalize">DAGENS DATUM</p>
             </div>
-            <div id="todocontainer" class="bg-secondary p-2">
+            <div id="todocontainer" class="bg-secondary p-2 overflow-auto ">
                 <div class="todoitem temp">
                     <div class="d-flex flex-column">
                         <div class="accordion fs-6" id="todoAccordion">
