--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                     </div>
                 </div>
             </div>
+            <div class="d-flex flex-fill align-items-end">
+                <!-- Button trigger modal -->
+                <button class="btn btn-primary circle add-todo topp-z" data-bs-toggle="modal" data-bs-target="#newTodo">
+                    <i class="fas fa-plus-circle"></i>
+                </button>
+            </div>
         </div>
         <div class="d-none d-sm-flex flex-column col-md-9 col-lg-10 bg-success padding-right-0 flex-fill">
             <div class="row margin-right-0">
@@ -154,10 +160,7 @@
             </div>
         </div>
     </div>
-    <!-- Button trigger modal -->
-    <button class="btn btn-primary circle add-todo topp-z" data-bs-toggle="modal" data-bs-target="#newTodo">
-        <i class="fas fa-plus-circle"></i>
-    </button>
+
     <!-- modal edit todo -->
     <div class="modal fade" id="editTodo" tabindex="-1" aria-labelledby="editTodoLabel" aria-hidden="true">
         <div class="modal-dialog">
